--- a/src/styles/Pagination_style.scss
+++ b/src/styles/Pagination_style.scss
@@ -1,12 +1,13 @@
 .pagination {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    background: var(--Dark-Primary-Buttons-White, #FFF);
-    border: 1px solid var(--Gray-Colors-Gray-10, #EBECF2);
-    border-radius: 8px;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background: var(--Dark-Primary-Buttons-White, #FFF);
+  border: 1px solid var(--Gray-Colors-Gray-10, #EBECF2);
+  border-radius: 8px;
+  margin-top: 24px;
+  flex-shrink: 0;
   
     &__info {
       font-size: 0.875rem;
